Link underline, dropdown legibility, correct navbar black and compact styling

--- a/style.css
+++ b/style.css
@@ -1,8 +1,25 @@
+a.dropdown-toggle {
+  color: hsl(0, 0%, 33%);
+  border-bottom: 1px solid hsl(206, 80%, 62%);
+}
+a.dropdown-toggle:hover {
+  color: hsl(206, 80%, 62%);
+  border-bottom-color: hsl(0, 0%, 93%);
+  text-decoration: none;
+  cursor: pointer;
+}
+.dropdown-menu>li>a {
+  color: hsl(0,0%,14%);
+}
 .navbar .nav>.active>a, .navbar .nav>.active>a:hover {
-  box-shadow: inset 4px 0px black, inset -4px -9px black,inset 0px -13px white;
+  box-shadow: inset 4px 0px hsl(0, 0%, 3%),
+              inset -4px -9px hsl(0, 0%, 3%),
+              inset 0px -13px 0px hsl(206, 80%, 62%);
 }
 h3 {
   display:inline-block;
+  margin: 0 2px;
+  line-height: 22px;
 }
 input[type="number"], input[type="text"] {
   text-align: center;
@@ -10,7 +27,8 @@ input[type="number"], input[type="text"] {
   border-bottom: 1px solid hsl(0, 0%, 70%);
   box-shadow: none;
   background-color: transparent;
-  /*margin-bottom: 2px;*/
+  margin: 0;
+  padding: 0px 2px;
 }
 input[type="number"]:focus, input[type="text"]:focus {
   outline: none;
